--- a/aman.html
+++ b/aman.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>abes college</title>
 </head>
 <body>
-    hello world
+    welcome to abes college 
+    <p>this is aman</p>   
+    <h1>we are coder</h1>
+    <h2>we are developer</h2>
+    <h3>we are learner</h3>
+    <h4>we are fresher</h4>
+    <h5>we are student</h5>
+    <h6>we are future</h6>
+
 </body>
 </html>
