--- a/Javascript/start.html
+++ b/Javascript/start.html
@@ -3,9 +3,14 @@
 <head>
 </head>
 <body>
+    <h1 id="adi"></h1>
 <script>
     // this is a way to write in html using javascript
-    Document.write("Hello World");
+    document.write("Hello World");
+    // this is a way to write in html using id
+    document.getElementById("adi").innerHTML="Hello World";
+    alert("Abes ki jai ho");
+   
 </script>
     
 </body>
