--- a/Javascript/array.html
+++ b/Javascript/array.html
@@ -7,7 +7,7 @@
     <p id="adi"></p>
     
     <script>
-        var car=["BMW","Audi","Volvo"];
+        var car=new Array("car11","car22","car33");
         car[2]="Tata";
         document.getElementById("adi").innerHTML=car;
     </script>
