--- a/Javascript/array.html
+++ b/Javascript/array.html
@@ -4,12 +4,22 @@
  
 </head>
 <body>
-    <p id="adi"></p>
+    <!-- <p id="adi"></p>
     
     <script>
         var car=new Array("car11","car22","car33");
         car[2]="Tata";
         document.getElementById("adi").innerHTML=car;
+    </script> -->
+    <p id="adi"></p>
+    <script>
+        const person={
+        firstname:"Aman",
+        lastname:"Yadav",
+        age:22
+    };
+    document.getElementById("adi").innerHTML=person.firstname+" "+person.lastname+" "+person.age;//creting json object
+
     </script>
     
 </body>
