--- a/Javascript/loop.html
+++ b/Javascript/loop.html
@@ -15,6 +15,14 @@
     //     document.write("python <br>");
     //     a++;
     // }
+     
+    // var b=1;
+    // do{
+    //     document.write("java <br>");
+    //     b++;
+
+    // }while(b<=5);
+
     
         </script>
 </body>
